--- a/css/style.less
+++ b/css/style.less
@@ -191,6 +191,9 @@ ul.list {
             }
             a {
               font: 300 18px/22px @font;
+              &.selected {
+                color: @pink;
+              }
             }
           }
         }
@@ -472,7 +475,6 @@ ul.list {
         background: #f4f4f4;
         border-radius: 20px;
         &:before {
-          content: '';
           position: absolute;
           right: 40%;
           top: -14px;
@@ -482,7 +484,6 @@ ul.list {
           border-radius: 50%;
         }
         &:after {
-          content: '';
           position: absolute;
           width: 60px;
           height: 60px;
@@ -2686,9 +2687,6 @@ ul.list {
             width: 74px;
             height: 74px;
           }
-          &:after {
-            content: none;
-          }
           &-wave {
             display: block;
           }
@@ -2816,6 +2814,7 @@ ul.list {
             border-radius: 35px;
           }
           &:after {
+            content: '';
             width: 88px;
             height: 88px;
             right: 2%;
@@ -3035,6 +3034,7 @@ ul.list {
             border-radius: 35px;
           }
           &:after {
+            content: '';
             width: 88px;
             height: 88px;
             right: 5%;
@@ -3330,6 +3330,7 @@ ul.list {
             border-radius: 0;
           }
           &:after {
+            content: '';
             top: auto;
             bottom: 60px;
             width: 36px;
@@ -3514,13 +3515,11 @@ ul.list {
         .top-banner {
           height: 225px;
           &:before {
+            content: '';
             right: 31%;
             top: 65px;
             width: 39px;
             height: 39px;
-          }
-          &:after {
-            content: none;
           }
           &-wave {
             display: block;
@@ -3953,6 +3952,7 @@ ul.list {
         .top-banner {
           height: 225px;
           &:before {
+            content: '';
             right: 37%;
             top: auto;
             bottom: -15px;
@@ -3960,6 +3960,7 @@ ul.list {
             height: 30px;
           }
           &:after {
+            content: '';
             right: 9%;
             top: -22px;
             width: 55px;
@@ -3973,6 +3974,7 @@ ul.list {
         .top-banner {
           height: 225px;
           &:before {
+            content: '';
             right: 37%;
             top: auto;
             bottom: -15px;
@@ -3980,6 +3982,7 @@ ul.list {
             height: 30px;
           }
           &:after {
+            content: '';
             right: 9%;
             top: -25px;
             width: 55px;
@@ -4128,12 +4131,14 @@ ul.list {
       .inner {
         .top-banner {
           &:before {
+            content: '';
             right: 34%;
             top: 150px;
             width: 30px;
             height: 30px;
           }
           &:after {
+            content: '';
             right: 42%;
             top: 30px;
             width: 55px;
@@ -4553,19 +4558,17 @@ ul.list {
     .deposit-page {
       .inner {
         .top-banner {
-          &:before {
-            content: none;
-          }
           &:after {
+            content: '';
             right: 38%;
             top: 65px;
             width: 51px;
             height: 51px;
           }
           &-wave {
-            // display: block;
-            right: 43%;
-            top: 50px;
+            display: block;
+            right: 40%;
+            top: 83px;
             width: 108px;
             height: 13px;
           }
@@ -4725,28 +4728,30 @@ ul.list {
       .inner {
         .top-banner {
           &:before {
-            right: 40%;
-            top: 20px;
-            width: 55px;
-            height: 55px;
-          }
-          &:after {
-            right: 33%;
+            content: '';
+            right: 45%;
             top: auto;
-            bottom: -5px;
+            bottom: 85px;
             width: 30px;
             height: 30px;
           }
+          &:after {
+            content: '';
+            right: 35%;
+            top: 40px;
+            width: 55px;
+            height: 55px;
+          }
           &-wave {
             display: block;
-            right: 43%;
-            top: 50px;
+            right: 38%;
+            top: 57px;
             width: 108px;
-            height: 13px;
+            height: 26px;
           }
           &-image {
-            width: 246px;
-            margin: 20px 0;
+            align-self: center;
+            width: 305px;
           }
         }
         .name {
@@ -4819,10 +4824,6 @@ ul.list {
     .salary-page {
       .inner {
         .top-banner {
-          &:before,
-          &:after {
-            content: none;
-          }
           &-content {
             &-text {
               &-desc {
@@ -4893,11 +4894,13 @@ ul.list {
       .inner {
         .top-banner {
           &:before {
+            content: '';
             right: 43%;
             width: 38px;
             height: 38px;
           }
           &:after {
+            content: '';
             right: 35%;
             top: 108px;
             width: 56px;
@@ -5095,6 +5098,7 @@ ul.list {
         .inner {
           .top-banner {
             &:after {
+              content: '';
               right: 27%;
               top: 30px;
               width: 57px;
@@ -5117,6 +5121,7 @@ ul.list {
         .inner {
           .top-banner {
             &:after {
+              content: '';
               right: 35%;
               top: auto;
               bottom: 40px;
@@ -5139,9 +5144,6 @@ ul.list {
       }
       .inner {
         .top-banner {
-          &:before {
-            content: none;
-          }
           &-image {
             align-self: center;
           }
@@ -5252,10 +5254,12 @@ ul.list {
         .top-banner {
           height: 225px;
           &:before {
+            content: '';
             top: auto;
             bottom: -15px;
           }
           &:after {
+            content: '';
             right: 7%;
             top: -25px;
             bottom: auto;
@@ -5602,10 +5606,8 @@ ul.list {
       .inner {
         .top-banner {
           height: 225px;
-          &:before {
-            content: none;
-          }
           &:after {
+            content: '';
             right: 35%;
             top: 55px;
             width: 56px;
@@ -5625,7 +5627,7 @@ ul.list {
           }
           &-image {
             align-self: flex-end;
-            width: 380px;
+            width: 325px;
           }
         }
         .features {
@@ -5709,6 +5711,12 @@ ul.list {
               }
             }
           }
+          &-image {
+            max-width: 600px;
+            img {
+              width: 100%;
+            }
+          }
         }
       }
     }
@@ -5716,10 +5724,6 @@ ul.list {
       .inner {
         .top-banner {
           height: 225px;
-          &:before,
-          &:after {
-            content: none;
-          }
           &-content {
             &-text {
               max-width: 300px;
@@ -5756,10 +5760,6 @@ ul.list {
     .partner-program-page {
       .inner {
         .top-banner {
-          &:before,
-          &:after {
-            content: none;
-          }
           &-content {
             &-text {
               &-buttons {
@@ -6369,9 +6369,12 @@ ul.list {
     .debit-card-page {
       .inner {
         .top-banner {
-          &:before,
-          &:after {
-            content: none;
+          &-content {
+            &-text {
+              &-desc {
+                max-width: 450px;
+              }
+            }
           }
           &-image {
             width: 450px;
@@ -6408,12 +6411,10 @@ ul.list {
       .inner {
         .top-banner {
           &:before {
+            content: '';
             top: -12px;
             width: 37px;
             height: 37px;
-          }
-          &:after {
-            content: none;
           }
           &-content {
             &-text {
@@ -6515,12 +6516,14 @@ ul.list {
       .inner {
         .top-banner {
           &:before {
+            content: '';
             right: 36%;
             top: 35px;
             width: 32px;
             height: 32px;
           }
           &:after {
+            content: '';
             top: auto;
             bottom: 53px;
             width: 51px;
@@ -6556,12 +6559,14 @@ ul.list {
       .inner {
         .top-banner {
           &:before {
+            content: '';
             right: 36%;
             top: 35px;
             width: 32px;
             height: 32px;
           }
           &:after {
+            content: '';
             top: auto;
             bottom: 53px;
             width: 51px;
@@ -6634,10 +6639,8 @@ ul.list {
     .ruble-deposit-page {
       .inner {
         .top-banner {
-          &:before {
-            content: none;
-          }
           &:after {
+            content: '';
             top: 42px;
             width: 52px;
             height: 52px;
@@ -6663,6 +6666,207 @@ ul.list {
         .features {
           &-block {
             margin-top: 35px;
+          }
+        }
+      }
+    }
+    .cloud-accounting-page {
+      .inner {
+        .top-banner {
+          &-content {
+            &-text {
+              &-desc {
+                max-width: 550px;
+              }
+            }
+          }
+          &-image {
+            align-self: center;
+            width: 380px;
+          }
+        }
+        .tariffs-info {
+          margin-top: 80px;
+          &-title {
+            font: 700 36px/1.3 @font;
+          }
+          &-desc {
+            max-width: 750px;
+            margin-top: 20px;
+            font: 300 18px/1.5 @font;
+          }
+          &-block {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 30px;
+            padding: 40px 45px 50px;
+            background: @gray;
+            &-item {
+              width: ~"calc((100% - 40px)/3)";
+              padding: 30px 35px 50px;
+              background: #fff;
+              border: 1px solid #e6e8e0;
+              border-radius: 20px;
+              overflow: hidden;
+              &-title {
+                font: 500 24px/1.3 @font;
+                color: @pink;
+              }
+              &-value {
+                position: relative;
+                margin-top: 20px;
+                padding-bottom: 20px;
+                font: 700 22px/1 @font;
+                &:after {
+                  content: '';
+                  position: absolute;
+                  left: 50%;
+                  bottom: 0;
+                  width: 150%;
+                  height: 1px;
+                  transform: translateX(-50%);
+                  background: #e6e8e0;
+                }
+              }
+              &-point {
+                margin-top: 30px;
+                &:last-child {
+                  display: flex;
+                  justify-content: space-between;
+                  .tariffs-info-block-item-point {
+                    &-name {
+                      max-width: 150px;
+                    }
+                    &-badge {
+                      position: relative;
+                      &:before {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        top: 50%;
+                        width: 28px;
+                        height: 28px;
+                        transform: translateY(-50%);
+                      }
+                      &.ok {
+                        padding-left: 38px;
+                        &:before {
+                          background: url(../img/icon_okay.svg) no-repeat;
+                          background-size: contain;
+                        }
+                      }
+                      &.deny {
+                        padding-left: 38px;
+                        &:before {
+                          background: url(../img/icon_deny.svg) no-repeat;
+                          background-size: contain;
+                        }
+                      }
+                    }
+                  }
+                }
+                &-name {
+                  font: 300 16px/1.3 @font;
+                }
+                &-desc {
+                  margin-top: 3px;
+                  font: 700 18px/1.3 @font;
+                }
+              }
+            }
+          }
+        }
+        .receive {
+          display: flex;
+          margin-top: 80px;
+          &-content {
+            max-width: 600px;
+            &-title {
+              margin-right: -30%;
+              font: 700 36px/1.3 @font;
+            }
+            &-list {
+              margin-top: 35px;
+              margin-bottom: 0;
+              li {
+                position: relative;
+                margin-top: 10px;
+                padding-left: 20px;
+                font: 300 18px/1.5 @font;
+                &:before {
+                  content: '';
+                  position: absolute;
+                  left: 0;
+                  top: 50%;
+                  width: 7px;
+                  height: 7px;
+                  transform: translateY(-50%);
+                  background: @pink;
+                  border-radius: 50%;
+                }
+                &:first-child {
+                  margin-top: 0;
+                }
+              }
+            }
+            &-docs {
+              display: flex;
+              margin-top: 45px;
+              &-item {
+                margin-left: 60px;
+                padding: 23px 35px;
+                background: @gray;
+                border-radius: 20px;
+                &:first-child {
+                  margin-left: 0;
+                }
+                a {
+                  position: relative;
+                  display: block;
+                  padding-left: 50px;
+                  font: 300 16px/1.5 @font;
+                  &:before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    width: 28px;
+                    height: 32px;
+                    transform: translateY(-50%);
+                    background: url(../img/icon_list.svg) no-repeat;
+                    background-size: contain;
+                  }
+                }
+              }
+            }
+          }
+          &-image {
+            width: 500px;
+            margin-top: 80px;
+            img {
+              width: 100%;
+            }
+          }
+        }
+        .features {
+          &-block {
+            &-item {
+              width: 33%;
+              margin-top: 50px;
+              &:nth-child(-n + 3) {
+                margin-top: 0;
+              }
+            }
+          }
+        }
+        .steps {
+          padding: 60px 70px 50px;
+          background: @gray;
+          border-radius: 20px;
+          &-block {
+            &-item {
+              width: 32%;
+            }
           }
         }
       }
