--- a/css/style.css
+++ b/css/style.css
@@ -520,10 +520,8 @@ ul.list li:before {
 .wrapper main .inner .top-banner-wave {
   position: absolute;
   display: none;
-  right: 48%;
-  top: 110px;
-  width: 134px;
-  height: 17px;
+  width: 98px;
+  height: 12px;
   overflow: hidden;
 }
 .wrapper main .inner .top-banner-wave:before {
@@ -794,12 +792,16 @@ ul.list li:before {
   font: 300 16px/1.5 'Gilroy', sans-serif;
 }
 .wrapper main .inner .advantage-block-item-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 35%;
   margin-left: auto;
 }
 .wrapper main .inner .advantage-block-item-image img {
   max-width: 100%;
-  max-height: 130px;
+  max-height: 150px;
+  margin-left: auto;
 }
 .wrapper main .inner .advantage-features {
   margin-top: 70px;
@@ -2912,15 +2914,17 @@ ul.list li:before {
 .wrapper main .actions-page .inner .top-banner {
   height: 225px;
 }
-.wrapper main .actions-page .inner .top-banner:before {
+.wrapper main .actions-page .inner .top-banner:after {
   content: '';
-  right: 44%;
+  right: 32%;
   top: 70px;
   width: 74px;
   height: 74px;
 }
 .wrapper main .actions-page .inner .top-banner-wave {
   display: block;
+  right: 36%;
+  top: 110px;
 }
 .wrapper main .actions-page .inner .top-banner-image {
   width: 320px;
@@ -3853,8 +3857,6 @@ ul.list li:before {
   display: block;
   right: 23%;
   top: 75px;
-  width: 108px;
-  height: 13px;
 }
 .wrapper main .about-page .inner .top-banner-image {
   -ms-flex-item-align: end;
@@ -4505,8 +4507,7 @@ ul.list li:before {
   display: block;
   right: 35%;
   top: 50px;
-  width: 108px;
-  height: 26px;
+  height: 24px;
 }
 .wrapper main .delokassa-page .inner .top-banner-content-text-desc {
   max-width: 450px;
@@ -4969,8 +4970,6 @@ ul.list li:before {
   display: block;
   right: 40%;
   top: 83px;
-  width: 108px;
-  height: 13px;
 }
 .wrapper main .deposit-page .inner .top-banner-content-text-desc {
   max-width: 350px;
@@ -5138,8 +5137,7 @@ ul.list li:before {
   display: block;
   right: 38%;
   top: 57px;
-  width: 108px;
-  height: 26px;
+  height: 24px;
 }
 .wrapper main .overdraft-page .inner .top-banner-image {
   -ms-flex-item-align: center;
@@ -5293,15 +5291,8 @@ ul.list li:before {
 .wrapper main .acquiring-page .inner .top-banner-wave {
   display: block;
   right: 38%;
-  top: 100px;
-  width: 108px;
-  height: 57px;
-}
-.wrapper main .acquiring-page .inner .top-banner-wave:before {
-  top: 50%;
-  height: 25px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 126px;
+  height: 24px;
 }
 .wrapper main .acquiring-page .inner .top-banner-image {
   -ms-flex-item-align: end;
@@ -5514,8 +5505,6 @@ ul.list li:before {
   display: block;
   right: 30%;
   top: 50px;
-  width: 108px;
-  height: 13px;
 }
 .wrapper main .acquiring-detail-page.trade-acquiring .inner .top-banner-image {
   width: 200px;
@@ -5530,10 +5519,8 @@ ul.list li:before {
 .wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner-wave {
   display: block;
   right: 38%;
-  top: auto;
   bottom: 55px;
-  width: 108px;
-  height: 26px;
+  height: 24px;
 }
 .wrapper main .acquiring-detail-page.internet-acquiring .inner .top-banner-image {
   width: 330px;
@@ -6042,15 +6029,8 @@ ul.list li:before {
 .wrapper main .remote-service-page .inner .top-banner-wave {
   display: block;
   right: 38%;
-  top: 45px;
-  width: 108px;
-  height: 57px;
-}
-.wrapper main .remote-service-page .inner .top-banner-wave:before {
-  top: 50%;
-  height: 25px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 70px;
+  height: 24px;
 }
 .wrapper main .remote-service-page .inner .top-banner-image {
   -ms-flex-item-align: end;
@@ -6944,16 +6924,8 @@ ul.list li:before {
 .wrapper main .legal-assistance-page .inner .top-banner-wave {
   display: block;
   right: 33%;
-  top: auto;
   bottom: 65px;
-  width: 108px;
-  height: 57px;
-}
-.wrapper main .legal-assistance-page .inner .top-banner-wave:before {
-  top: 50%;
-  height: 25px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  height: 24px;
 }
 .wrapper main .legal-assistance-page .inner .top-banner-image {
   width: 290px;
@@ -6978,16 +6950,8 @@ ul.list li:before {
 .wrapper main .payment-page .inner .top-banner-wave {
   display: block;
   right: 33%;
-  top: auto;
   bottom: 65px;
-  width: 108px;
-  height: 57px;
-}
-.wrapper main .payment-page .inner .top-banner-wave:before {
-  top: 50%;
-  height: 25px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  height: 24px;
 }
 .wrapper main .payment-page .inner .top-banner-content-text-desc {
   max-width: 500px;
@@ -7045,8 +7009,7 @@ ul.list li:before {
   display: block;
   right: 33%;
   top: 58px;
-  width: 108px;
-  height: 25px;
+  height: 24px;
 }
 .wrapper main .ruble-deposit-page .inner .top-banner-content-text-title {
   max-width: 250px;
@@ -7275,14 +7238,66 @@ ul.list li:before {
 .wrapper main .transfer-page .inner .top-banner-wave {
   display: block;
   right: 30%;
-  top: auto;
   bottom: 70px;
-  width: 105px;
   height: 24px;
 }
 .wrapper main .transfer-page .inner .top-banner-image {
   -ms-flex-item-align: center;
       align-self: center;
+}
+.wrapper main .direct-bank-page .inner .top-banner:before {
+  content: '';
+  top: 35px;
+  right: 36%;
+  width: 32px;
+  height: 32px;
+}
+.wrapper main .direct-bank-page .inner .top-banner:after {
+  content: '';
+  right: 28%;
+  bottom: 77px;
+  width: 51px;
+  height: 51px;
+}
+.wrapper main .direct-bank-page .inner .top-banner-wave {
+  display: block;
+  right: 30%;
+  bottom: 88px;
+  height: 24px;
+}
+.wrapper main .direct-bank-page .inner .top-banner-image {
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 265px;
+}
+.wrapper main .direct-bank-page .inner .interface {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 80px;
+  padding: 35px 165px 20px 70px;
+  background: #fbfbfb;
+  border-radius: 20px;
+}
+.wrapper main .direct-bank-page .inner .interface-content-title {
+  max-width: 500px;
+  font: 700 36px/1.3 'Gilroy', sans-serif;
+}
+.wrapper main .direct-bank-page .inner .interface-content-desc {
+  margin-top: 20px;
+  font: 300 18px/1.5 'Gilroy', sans-serif;
+}
+.wrapper main .direct-bank-page .inner .interface-image {
+  width: 355px;
+}
+.wrapper main .direct-bank-page .inner .interface-image img {
+  width: 100%;
+}
+.wrapper main .direct-bank-page .inner .steps-block-item {
+  width: 32%;
 }
 .wrapper main .start-business-page .inner .top-banner:after {
   content: '';
@@ -7298,8 +7313,6 @@ ul.list li:before {
   display: block;
   right: 30%;
   top: 150px;
-  width: 134px;
-  height: 17px;
 }
 .wrapper main .start-business-page .inner .top-banner-image {
   width: 426px;
@@ -7562,16 +7575,8 @@ ul.list li:before {
 .wrapper main .small-business-page .inner .top-banner-wave {
   display: block;
   right: 28%;
-  top: auto;
   bottom: 60px;
-  width: 108px;
-  height: 57px;
-}
-.wrapper main .small-business-page .inner .top-banner-wave:before {
-  top: 50%;
-  height: 25px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  height: 24px;
 }
 .wrapper main .small-business-page .inner .top-banner-image {
   -ms-flex-item-align: end;
@@ -7593,15 +7598,8 @@ ul.list li:before {
 .wrapper main .freelancer-page .inner .top-banner-wave {
   display: block;
   right: 38%;
-  top: 60px;
-  width: 108px;
-  height: 57px;
-}
-.wrapper main .freelancer-page .inner .top-banner-wave:before {
-  top: 50%;
-  height: 25px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 92px;
+  height: 24px;
 }
 .wrapper main .freelancer-page .inner .top-banner-image {
   -ms-flex-item-align: end;
@@ -7623,10 +7621,8 @@ ul.list li:before {
 .wrapper main .all-tools-page .inner .top-banner-wave {
   display: block;
   right: 28%;
-  top: auto;
   bottom: 50px;
-  width: 108px;
-  height: 26px;
+  height: 24px;
 }
 .wrapper main .all-tools-page .inner .top-banner-image {
   -ms-flex-item-align: end;
@@ -8479,7 +8475,38 @@ ul.list li:before {
   resize: none;
 }
 .wrapper .popup_wrapper .inner .popup-block-form-file {
+  position: relative;
   margin-top: 25px;
+}
+.wrapper .popup_wrapper .inner .popup-block-form-file input[type='file'] {
+  display: none;
+}
+.wrapper .popup_wrapper .inner .popup-block-form-file label {
+  position: relative;
+  padding-left: 40px;
+  font: 300 14px/1.5 'Gilroy', sans-serif;
+}
+.wrapper .popup_wrapper .inner .popup-block-form-file label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 28px;
+  height: 32px;
+  margin-bottom: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url(../img/icon_list.svg) no-repeat;
+  background-size: contain;
+}
+.wrapper .popup_wrapper .inner .popup-block-form-file-desc {
+  margin-top: 5px;
+  padding-left: 40px;
+}
+.wrapper .popup_wrapper .inner .popup-block-form-file-desc span {
+  display: block;
+  font: 300 14px/1.5 'Gilroy', sans-serif;
+  color: #808080;
 }
 .wrapper .popup_wrapper .inner .popup-block-form-terms {
   margin-top: 25px;
