--- a/css/style.less
+++ b/css/style.less
@@ -483,10 +483,8 @@ ul.list {
         &-wave {
           position: absolute;
           display: none;
-          right: 48%;
-          top: 110px;
-          width: 134px;
-          height: 17px;
+          width: 98px;
+          height: 12px;
           overflow: hidden;
           &:before {
             content: '';
@@ -726,11 +724,13 @@ ul.list {
               }
             }
             &-image {
+              display: flex;
               width: 35%;
               margin-left: auto;
               img {
                 max-width: 100%;
-                max-height: 130px;
+                max-height: 150px;
+                margin-left: auto;
               }
             }
           }
@@ -2668,15 +2668,17 @@ ul.list {
       .inner {
         .top-banner {
           height: 225px;
-          &:before {
+          &:after {
             content: '';
-            right: 44%;
+            right: 32%;
             top: 70px;
             width: 74px;
             height: 74px;
           }
           &-wave {
             display: block;
+            right: 36%;
+            top: 110px;
           }
           &-image {
             width: 320px;
@@ -3509,8 +3511,6 @@ ul.list {
             display: block;
             right: 23%;
             top: 75px;
-            width: 108px;
-            height: 13px;
           }
           &-image {
             align-self: flex-end;
@@ -4130,8 +4130,7 @@ ul.list {
             display: block;
             right: 35%;
             top: 50px;
-            width: 108px;
-            height: 26px;
+            height: 24px;
           }
           &-content {
             &-text {
@@ -4551,8 +4550,6 @@ ul.list {
             display: block;
             right: 40%;
             top: 83px;
-            width: 108px;
-            height: 13px;
           }
           &-content {
             &-text {
@@ -4727,8 +4724,7 @@ ul.list {
             display: block;
             right: 38%;
             top: 57px;
-            width: 108px;
-            height: 26px;
+            height: 24px;
           }
           &-image {
             align-self: center;
@@ -4891,14 +4887,8 @@ ul.list {
           &-wave {
             display: block;
             right: 38%;
-            top: 100px;
-            width: 108px;
-            height: 57px;
-            &:before {
-              top: 50%;
-              height: 25px;
-              transform: translateY(-50%);
-            }
+            top: 126px;
+            height: 24px;
           }
           &-image {
             align-self: flex-end;
@@ -5090,8 +5080,6 @@ ul.list {
               display: block;
               right: 30%;
               top: 50px;
-              width: 108px;
-              height: 13px;
             }
             &-image {
               width: 200px;
@@ -5112,10 +5100,8 @@ ul.list {
             &-wave {
               display: block;
               right: 38%;
-              top: auto;
               bottom: 55px;
-              width: 108px;
-              height: 26px;
+              height: 24px;
             }
             &-image {
               width: 330px;
@@ -5598,14 +5584,8 @@ ul.list {
           &-wave {
             display: block;
             right: 38%;
-            top: 45px;
-            width: 108px;
-            height: 57px;
-            &:before {
-              top: 50%;
-              height: 25px;
-              transform: translateY(-50%);
-            }
+            top: 70px;
+            height: 24px;
           }
           &-image {
             align-self: flex-end;
@@ -6515,15 +6495,8 @@ ul.list {
           &-wave {
             display: block;
             right: 33%;
-            top: auto;
             bottom: 65px;
-            width: 108px;
-            height: 57px;
-            &:before {
-              top: 50%;
-              height: 25px;
-              transform: translateY(-50%);
-            }
+            height: 24px;
           }
           &-image {
             width: 290px;
@@ -6558,15 +6531,8 @@ ul.list {
           &-wave {
             display: block;
             right: 33%;
-            top: auto;
             bottom: 65px;
-            width: 108px;
-            height: 57px;
-            &:before {
-              top: 50%;
-              height: 25px;
-              transform: translateY(-50%);
-            }
+            height: 24px;
           }
           &-content {
             &-text {
@@ -6633,8 +6599,7 @@ ul.list {
             display: block;
             right: 33%;
             top: 58px;
-            width: 108px;
-            height: 25px;
+            height: 24px;
           }
           &-content {
             &-text {
@@ -6875,13 +6840,72 @@ ul.list {
           &-wave {
             display: block;
             right: 30%;
-            top: auto;
             bottom: 70px;
-            width: 105px;
             height: 24px;
           }
           &-image {
             align-self: center;
+          }
+        }
+      }
+    }
+    .direct-bank-page {
+      .inner {
+        .top-banner {
+          &:before {
+            content: '';
+            top: 35px;
+            right: 36%;
+            width: 32px;
+            height: 32px;
+          }
+          &:after {
+            content: '';
+            right: 28%;
+            bottom: 77px;
+            width: 51px;
+            height: 51px;
+          }
+          &-wave {
+            display: block;
+            right: 30%;
+            bottom: 88px;
+            height: 24px;
+          }
+          &-image {
+            align-self: center;
+            width: 265px;
+          }
+        }
+        .interface {
+          display: flex;
+          justify-content: space-between;
+          margin-top: 80px;
+          padding: 35px 165px 20px 70px;
+          background: @gray;
+          border-radius: 20px;
+          &-content {
+            &-title {
+              max-width: 500px;
+              font: 700 36px/1.3 @font;
+            }
+            &-desc {
+              margin-top: 20px;
+              font: 300 18px/1.5 @font;
+            }
+          }
+          &-image {
+            width: 355px;
+            img {
+              width: 100%;
+            }
+          }
+        }
+        .steps {
+          &-block {
+            &-item {
+              width: 32%;
+            }
           }
         }
       }
@@ -6905,8 +6929,6 @@ ul.list {
             display: block;
             right: 30%;
             top: 150px;
-            width: 134px;
-            height: 17px;
           }
           &-image {
             width: 426px;
@@ -7170,15 +7192,8 @@ ul.list {
           &-wave {
             display: block;
             right: 28%;
-            top: auto;
             bottom: 60px;
-            width: 108px;
-            height: 57px;
-            &:before {
-              top: 50%;
-              height: 25px;
-              transform: translateY(-50%);
-            }
+            height: 24px;
           }
           &-image {
             align-self: flex-end;
@@ -7207,14 +7222,8 @@ ul.list {
           &-wave {
             display: block;
             right: 38%;
-            top: 60px;
-            width: 108px;
-            height: 57px;
-            &:before {
-              top: 50%;
-              height: 25px;
-              transform: translateY(-50%);
-            }
+            top: 92px;
+            height: 24px;
           }
           &-image {
             align-self: flex-end;
@@ -7243,10 +7252,8 @@ ul.list {
           &-wave {
             display: block;
             right: 28%;
-            top: auto;
             bottom: 50px;
-            width: 108px;
-            height: 26px;
+            height: 24px;
           }
           &-image {
             align-self: flex-end;
@@ -8017,7 +8024,37 @@ ul.list {
               }
             }
             &-file {
+              position: relative;
               margin-top: 25px;
+              input[type='file'] {
+                display: none;
+              }
+              label {
+                position: relative;
+                padding-left: 40px;
+                font: 300 14px/1.5 @font;
+                &:before {
+                  content: '';
+                  position: absolute;
+                  left: 0;
+                  top: 50%;
+                  width: 28px;
+                  height: 32px;
+                  margin-bottom: 0;
+                  transform: translateY(-50%);
+                  background: url(../img/icon_list.svg) no-repeat;
+                  background-size: contain;
+                }
+              }
+              &-desc {
+                margin-top: 5px;
+                padding-left: 40px;
+                span {
+                  display: block;
+                  font: 300 14px/1.5 @font;
+                  color: #808080;
+                }
+              }
             }
             &-terms {
               margin-top: 25px;
