--- a/css/style.less
+++ b/css/style.less
@@ -5410,6 +5410,37 @@ ul.list {
         }
       }
     }
+    .multibank-page {
+      .inner {
+        .top-banner {
+          &:after {
+            content: '';
+            top: -10px;
+            right: 36%;
+            width: 52px;
+            height: 52px;
+          }
+          &-content {
+            &-text {
+              &-desc {
+                max-width: 620px;
+              }
+            }
+          }
+          &-image {
+            align-self: flex-end;
+            width: 305px;
+          }
+        }
+        .steps {
+          &-block {
+            &-item {
+              width: 32%;
+            }
+          }
+        }
+      }
+    }
     .news-detail-page {
       .inner {
         .text {
