--- a/css/style.less
+++ b/css/style.less
@@ -6901,6 +6901,76 @@ ul.list {
         }
       }
     }
+    .sitemap-page {
+      .inner {
+        .top-banner {
+          height: 225px;
+          &:before {
+            content: '';
+            top: -6px;
+            right: 36%;
+            width: 32px;
+            height: 32px;
+          }
+          &:after {
+            content: '';
+            right: 9%;
+            bottom: 53px;
+            width: 51px;
+            height: 51px;
+          }
+          &-wave {
+            display: block;
+            right: 12%;
+            bottom: 64px;
+            height: 24px;
+          }
+        }
+        .sitemap {
+          margin-top: 80px;
+          &-block {
+            display: flex;
+            justify-content: space-between;
+            &-item {
+              display: flex;
+              flex-direction: column;
+              width: 33%;
+              &-list {
+                margin-top: auto;
+                margin-bottom: 0;
+                &:first-child {
+                  margin-top: 0;
+                }
+                li {
+                  position: relative;
+                  padding-left: 20px;
+                  font: 500 18px/2 @font;
+                  &:before {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    top: 14px;
+                    width: 7px;
+                    height: 7px;
+                    background: @pink;
+                    border-radius: 50%;
+                  }
+                }
+                ul {
+                  padding-left: 20px;
+                  li {
+                    font-weight: 300;
+                    &:before {
+                      content: none;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
     .tariffs-page {
       .inner {
         .top-banner {
@@ -7789,8 +7859,14 @@ ul.list {
             padding: 60px;
             border: 1px solid @gray;
             border-radius: 20px;
-            & > div {
-              max-width: 445px;
+            form {
+              max-width: 600px;
+              & > div {
+                margin-bottom: 20px;
+                &:last-child {
+                  margin-bottom: 0;
+                }
+              }
             }
             &-title {
               margin-bottom: 7px;
@@ -7810,7 +7886,6 @@ ul.list {
               }
             }
             &-list {
-              margin-top: 20px;
               margin-bottom: 0;
               counter-reset: list;
               li {
@@ -7858,10 +7933,7 @@ ul.list {
             }
             &-input {
               position: relative;
-              margin-top: 20px;
-              &:first-child {
-                margin-top: 0;
-              }
+              margin-bottom: 20px;
               input {
                 width: 100%;
                 height: 65px;
@@ -7890,9 +7962,6 @@ ul.list {
                   }
                 }
               }
-              .parsley-errors-list {
-                display: none;
-              }
               label {
                 position: absolute;
                 pointer-events: none;
@@ -7903,6 +7972,9 @@ ul.list {
                 font: 18px/1 @font;
                 color: #b3b3b3;
                 transition: 0.3s;
+              }
+              .parsley-errors-list {
+                display: none;
               }
               &.city {
                 input {
@@ -7944,7 +8016,6 @@ ul.list {
               position: relative;
               display: flex;
               align-items: center;
-              margin-top: 20px;
               &-wrap {
                 width: 255px;
                 input {
@@ -8019,7 +8090,6 @@ ul.list {
             &-tariff,
             &-discount {
               position: relative;
-              margin-top: 20px;
               label {
                 position: absolute;
                 pointer-events: none;
@@ -8050,13 +8120,18 @@ ul.list {
             &-text {
               textarea {
                 width: 100%;
-                margin-top: 20px;
                 padding: 20px 30px;
                 background: #f4f4f4;
-                border: none;
+                border: 1px solid transparent;
                 border-radius: 10px;
                 outline: none;
                 resize: none;
+                &.parsley-error {
+                  border-color: @pink;
+                }
+              }
+              .parsley-errors-list {
+                display: none;
               }
             }
             &-file {
@@ -8236,6 +8311,9 @@ ul.list {
                   transition: 0.3s;
                 }
               }
+            }
+            .parsley-errors-list {
+              display: none;
             }
           }
           &-tariff {
